1. updated reasons to drop columns

--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -1220,7 +1220,13 @@
    "id": "18abaa69",
    "metadata": {},
    "source": [
-    "I can see that Certification.Body, Certification.Address, Certification.Contact, ICO.Number, Lot.Number, Species, Unnamed: 0  columns can be deleted safely. "
+    "I can see that Certification.Body, Certification.Address, Certification.Contact, ICO.Number, Lot.Number, Species, Unnamed: 0  columns can be deleted safely. \n",
+    "\n",
+    "Dropped the columns in following reasons\n",
+    "1. Lot. Number - > 50% missing values\n",
+    "2. Certification.Body, Certification.Address, Certification.Contact, ICO.Number - Unnecessary columns for the project\n",
+    "3. Species - No varience \n",
+    "4. Unnamed 0 - just an index field"
    ]
   },
   {
