--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -4239,7 +4239,7 @@
    "id": "fb74113d",
    "metadata": {},
    "source": [
-    "### preprocessing the altitude data"
+    "### cleaning the altitude data"
    ]
   },
   {
