--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -3330,6 +3330,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3dbebe3a",
+   "metadata": {},
+   "source": [
+    "### filling the missing values with mod for categorical data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 123,
    "id": "36d63aa6",
@@ -5847,6 +5855,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "122e5daa",
+   "metadata": {},
+   "source": [
+    "### droping later found unecessary columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "523113e2",
    "metadata": {},
    "source": [
@@ -6208,6 +6224,14 @@
    ],
    "source": [
     "calculate_pre_statistics(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5a61a75",
+   "metadata": {},
+   "source": [
+    "### save the file"
    ]
   },
   {
