1. bean color corrected

--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -6243,6 +6243,166 @@
    "source": [
     "df.to_csv('/Users/admin/Documents/PICT/Year 1 Sem 1/ICT/Data Mining and Warehousing/Project/Brewlytics/data/combined_data_cleaned_final.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a51e1c0c",
+   "metadata": {},
+   "source": [
+    "# Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8775b44",
+   "metadata": {},
+   "source": [
+    "## Transform Bean Color into groups"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "70ac5d56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blue-green' 'bluish-green' 'brown' 'brownish' 'cream /brown'\n",
+      " 'fermented orange' 'green' 'green-yellow' 'greenish' 'pale - yellow'\n",
+      " 'pale green' 'pale yellow' 'pale-yellow' 'verdoso' 'yellow'\n",
+      " 'yellow - green' 'yellow -green' 'yellow green' 'yellow- green'\n",
+      " 'yellow-green' 'yellowish']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_colors = df['Color'].str.lower().unique()\n",
+    "unique_colors.sort()\n",
+    "print(unique_colors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ced2ba7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['RawColor'] = df['Color']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "979965eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      1413\n",
+       "unique       21\n",
+       "top       green\n",
+       "freq       1048\n",
+       "Name: RawColor, dtype: object"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['RawColor'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "c1acb423",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "color_mapping = {\n",
+    "    'blue-green': 'green',\n",
+    "    'bluish-green':'green',\n",
+    "    'green': 'green',\n",
+    "    'greenish': 'green',\n",
+    "    'pale green': 'green',\n",
+    "    'verdoso': 'green',\n",
+    "    \n",
+    "    'yellow - green': 'green-yellow',\n",
+    "    'yellow -green': 'green-yellow',\n",
+    "    'yellow green': 'green-yellow',\n",
+    "    'yellow- green': 'green-yellow',\n",
+    "    'yellow-green': 'green-yellow',\n",
+    "    'green-yellow': 'green-yellow',\n",
+    "    \n",
+    "    'brown': 'brown',\n",
+    "    'brownish': 'brown',\n",
+    "    'cream /brown': 'brown',\n",
+    "    \n",
+    "    'fermented orange': 'yellow',\n",
+    "    'pale - yellow': 'yellow',\n",
+    "    'pale yellow': 'yellow',\n",
+    "    'pale-yellow': 'yellow',\n",
+    "    'yellow': 'yellow',\n",
+    "    'yellowish': 'yellow',\n",
+    "    \n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "87792ead",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      1413\n",
+       "unique        4\n",
+       "top       green\n",
+       "freq       1312\n",
+       "Name: Color, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Color\n",
+       "green           92.852088\n",
+       "green-yellow     4.670913\n",
+       "yellow           1.981599\n",
+       "brown            0.495400\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['Color'] = df['Color'].str.lower().replace(color_mapping)\n",
+    "display(df['Color'].describe())\n",
+    "display(df['Color'].value_counts(normalize=True) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6483d73e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
