1. data preprocessing done

--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -6397,12 +6397,521 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2f98ea62",
+   "metadata": {},
+   "source": [
+    "## Transform Havested Year Data Column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "dbec7448",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['08/09 crop', '1T/2011', '1t/2011', '2009 - 2010', '2009 / 2010', '2009-2010', '2009/2010', '2010', '2010-2011', '2011', '2011/2012', '2012', '2013', '2013/2014', '2014', '2014/2015', '2015', '2015/2016', '2016', '2016 / 2017', '2017', '2017 / 2018', '2018', '2019 / 2020', '2020 / 2021', '2022 / 2023', '2023', '2023 / 2024', '2024', '2024 / 2025', '2025 / 2026', '3T/2011', '47/2010', '4T/10', '4T/2010', '4T72010', '4t/2010', '4t/2011', 'Abril - Julio', 'Abril - Julio /2011', 'August to December', 'December 2009-March 2010', 'January 2011', 'January Through April', 'March 2010', 'May-August', 'Mayo a Julio']\n"
+     ]
+    }
+   ],
+   "source": [
+    "unique_years = sorted(df['Harvest.Year'].unique())\n",
+    "print(unique_years)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "33c50d71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Harvest.Year</th>\n",
+       "      <th>Grading.Date</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>May-August</td>\n",
+       "      <td>May 31st, 2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312</th>\n",
+       "      <td>4T/10</td>\n",
+       "      <td>February 9th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>395</th>\n",
+       "      <td>January Through April</td>\n",
+       "      <td>May 26th, 2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>477</th>\n",
+       "      <td>August to December</td>\n",
+       "      <td>June 16th, 2010</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>492</th>\n",
+       "      <td>Mayo a Julio</td>\n",
+       "      <td>July 29th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>527</th>\n",
+       "      <td>Abril - Julio</td>\n",
+       "      <td>May 12th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>631</th>\n",
+       "      <td>4T/10</td>\n",
+       "      <td>February 9th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>776</th>\n",
+       "      <td>4T/10</td>\n",
+       "      <td>February 9th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>814</th>\n",
+       "      <td>Mayo a Julio</td>\n",
+       "      <td>July 29th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>869</th>\n",
+       "      <td>Mayo a Julio</td>\n",
+       "      <td>October 4th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>932</th>\n",
+       "      <td>Abril - Julio</td>\n",
+       "      <td>September 7th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1167</th>\n",
+       "      <td>4T/10</td>\n",
+       "      <td>February 9th, 2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1191</th>\n",
+       "      <td>08/09 crop</td>\n",
+       "      <td>April 9th, 2010</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Harvest.Year         Grading.Date\n",
+       "Index                                            \n",
+       "16                May-August       May 31st, 2010\n",
+       "312                    4T/10   February 9th, 2011\n",
+       "395    January Through April       May 26th, 2010\n",
+       "477       August to December      June 16th, 2010\n",
+       "492             Mayo a Julio      July 29th, 2011\n",
+       "527            Abril - Julio       May 12th, 2011\n",
+       "631                    4T/10   February 9th, 2011\n",
+       "776                    4T/10   February 9th, 2011\n",
+       "814             Mayo a Julio      July 29th, 2011\n",
+       "869             Mayo a Julio    October 4th, 2011\n",
+       "932            Abril - Julio  September 7th, 2011\n",
+       "1167                   4T/10   February 9th, 2011\n",
+       "1191              08/09 crop      April 9th, 2010"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mask = ~df['Harvest.Year'].str.contains(r'\\d{4}', regex=True)\n",
+    "result = df.loc[mask, ['Harvest.Year', 'Grading.Date']]\n",
+    "result.index.name = 'Index'\n",
+    "display(result)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6483d73e",
+   "id": "cfd3d614",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.at[16, 'Harvest.Year'] = '2010'\n",
+    "df.at[312, 'Harvest.Year'] = '2011'\n",
+    "df.at[395, 'Harvest.Year'] = '2010'\n",
+    "df.at[477, 'Harvest.Year'] = '2010'\n",
+    "df.at[527, 'Harvest.Year'] = '2011'\n",
+    "df.at[631, 'Harvest.Year'] = '2011'\n",
+    "df.at[776, 'Harvest.Year'] = '2011'\n",
+    "df.at[814, 'Harvest.Year'] = '2011'\n",
+    "df.at[869, 'Harvest.Year'] = '2011'\n",
+    "df.at[932, 'Harvest.Year'] = '2011'\n",
+    "df.at[1167, 'Harvest.Year'] = '2011'\n",
+    "df.at[1191, 'Harvest.Year'] = '2010'\n",
+    "df.at[492, 'Harvest.Year'] = '2011'\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "57b5ed01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Harvest.Year</th>\n",
+       "      <th>Grading.Date</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Harvest.Year, Grading.Date]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "mask = ~df['Harvest.Year'].str.contains(r'\\d{4}', regex=True)\n",
+    "result = df.loc[mask, ['Harvest.Year', 'Grading.Date']]\n",
+    "result.index.name = 'Index'\n",
+    "display(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
+   "id": "4be2e8ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1T/2011',\n",
+       " '1t/2011',\n",
+       " '2009 - 2010',\n",
+       " '2009 / 2010',\n",
+       " '2009-2010',\n",
+       " '2009/2010',\n",
+       " '2010',\n",
+       " '2010-2011',\n",
+       " '2011',\n",
+       " '2011/2012',\n",
+       " '2012',\n",
+       " '2013',\n",
+       " '2013/2014',\n",
+       " '2014',\n",
+       " '2014/2015',\n",
+       " '2015',\n",
+       " '2015/2016',\n",
+       " '2016',\n",
+       " '2016 / 2017',\n",
+       " '2017',\n",
+       " '2017 / 2018',\n",
+       " '2018',\n",
+       " '2019 / 2020',\n",
+       " '2020 / 2021',\n",
+       " '2022 / 2023',\n",
+       " '2023',\n",
+       " '2023 / 2024',\n",
+       " '2024',\n",
+       " '2024 / 2025',\n",
+       " '2025 / 2026',\n",
+       " '3T/2011',\n",
+       " '47/2010',\n",
+       " '4T/2010',\n",
+       " '4T72010',\n",
+       " '4t/2010',\n",
+       " '4t/2011',\n",
+       " 'Abril - Julio /2011',\n",
+       " 'December 2009-March 2010',\n",
+       " 'January 2011',\n",
+       " 'March 2010']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unique_years = sorted(df['Harvest.Year'].unique())\n",
+    "display(unique_years)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "id": "d43d4201",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_of_harvest_year = {\n",
+    "    '1T/2011':'2011',\n",
+    " '1t/2011':'2011',\n",
+    " '2009 - 2010':'2010',\n",
+    " '2009 / 2010':'2010',\n",
+    " '2009-2010':'2010',\n",
+    " '2009/2010':'2010',\n",
+    " '2010': '2010',\n",
+    " '2010-2011': '2011',\n",
+    " '2011': '2011',\n",
+    " '2011/2012':'2012',\n",
+    " '2012': '2012',\n",
+    " '2013': '2013',\n",
+    " '2013/2014': '2014',\n",
+    " '2014': '2014',\n",
+    " '2014/2015':'2015',\n",
+    " '2015':'2015',\n",
+    " '2015/2016':'2016',\n",
+    " '2016': '2016',\n",
+    " '2016 / 2017':'2017',\n",
+    " '2017': '2017',\n",
+    " '2017 / 2018':'2018',\n",
+    " '2018':'2018',\n",
+    " '2019 / 2020':'2020',\n",
+    " '2020 / 2021':'2021',\n",
+    " '2022 / 2023':'2023',\n",
+    " '2023':'2023',\n",
+    " '2023 / 2024':'2024',\n",
+    " '2024':'2024',\n",
+    " '2024 / 2025':'2025',\n",
+    " '2025 / 2026':'2025',\n",
+    " '3T/2011':'2011',\n",
+    " '47/2010': '2010',\n",
+    " '4T/2010': '2010',\n",
+    " '4T72010': '2010',\n",
+    " '4t/2010': '2010',\n",
+    " '4t/2011':'2011',\n",
+    " 'Abril - Julio /2011':'2011',\n",
+    " 'December 2009-March 2010':'2010',\n",
+    " 'January 2011':'2011',\n",
+    " 'March 2010':'2010'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "id": "27934ea5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Harvest.Year'] = df['Harvest.Year'].replace(map_of_harvest_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "ecacafc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2014\n",
+       "1     2014\n",
+       "3     2014\n",
+       "4     2014\n",
+       "5     2013\n",
+       "6     2012\n",
+       "7     2010\n",
+       "8     2010\n",
+       "9     2014\n",
+       "10    2014\n",
+       "14    2010\n",
+       "16    2010\n",
+       "17    2010\n",
+       "18    2015\n",
+       "21    2014\n",
+       "22    2012\n",
+       "24    2013\n",
+       "25    2011\n",
+       "26    2010\n",
+       "27    2013\n",
+       "Name: Harvest.Year, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df['Harvest.Year'].head(20))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61f9d5be",
+   "metadata": {},
+   "source": [
+    "## Transform of Country of origin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "7ee76a5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country.of.Origin\n",
+       "Mexico                          225\n",
+       "Guatemala                       182\n",
+       "Taiwan                          142\n",
+       "Thailand                        141\n",
+       "Colombia                        124\n",
+       "Brazil                          107\n",
+       "Ethiopia                         57\n",
+       "Indonesia                        51\n",
+       "Honduras                         47\n",
+       "United States (Hawaii)           46\n",
+       "Tanzania, United Republic Of     42\n",
+       "Costa Rica                       42\n",
+       "Vietnam                          40\n",
+       "Kenya                            31\n",
+       "Nicaragua                        29\n",
+       "Uganda                           29\n",
+       "China                            17\n",
+       "El Salvador                      12\n",
+       "Malawi                           11\n",
+       "Haiti                             6\n",
+       "Peru                              6\n",
+       "Panama                            5\n",
+       "Philippines                       3\n",
+       "Zambia                            2\n",
+       "Laos                              2\n",
+       "Papua New Guinea                  2\n",
+       "United States (Puerto Rico)       2\n",
+       "Rwanda                            1\n",
+       "Ecuador                           1\n",
+       "Mauritius                         1\n",
+       "Burundi                           1\n",
+       "Myanmar                           1\n",
+       "Cote d?Ivoire                     1\n",
+       "Yemen                             1\n",
+       "Cambodia                          1\n",
+       "Japan                             1\n",
+       "Jamaica                           1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Country.of.Origin'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "id": "633dc460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixes = {\n",
+    "    'United States (Puerto Rico)': 'Puerto Rico',\n",
+    "    'United States (Hawaii)':      'Hawaii',\n",
+    "    'Tanzania, United Republic Of':'Tanzania'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "46d11f11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Country.of.Origin'] = df['Country.of.Origin'].replace(fixes)\n",
+    "df['Country.of.Origin'] = df['Country.of.Origin'].str.strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "2069d0b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Country.of.Origin\n",
+      "Puerto Rico     2\n",
+      "Hawaii         46\n",
+      "Tanzania       42\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['Country.of.Origin'].value_counts().loc[['Puerto Rico','Hawaii','Tanzania']])\n"
+   ]
   }
  ],
  "metadata": {
