1. nidagnn kalin dna commit eka

--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -6912,6 +6912,73 @@
    "source": [
     "print(df['Country.of.Origin'].value_counts().loc[['Puerto Rico','Hawaii','Tanzania']])\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "106945c7",
+   "metadata": {},
+   "source": [
+    "## Transform Processing Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "id": "95d02008",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Processing.Method\n",
+       "Washed / Wet                                              899\n",
+       "Natural / Dry                                             337\n",
+       "Pulped natural / honey                                     87\n",
+       "Semi-washed / Semi-pulped                                  51\n",
+       "Other                                                      23\n",
+       "Aerobic natural                                             2\n",
+       "Wash Carbonic Process                                       2\n",
+       "DEEP WASHED                                                 1\n",
+       "Anaerobic Honey                                             1\n",
+       "Wild Luwak & Dry Hull                                       1\n",
+       "Anaerobic Natural                                           1\n",
+       "48H fermented aerobic - dried on african beds (20 days      1\n",
+       "Dynamic Cherry                                              1\n",
+       "48H fermented aerobic - dried in Dark Room (60 days)        1\n",
+       "intrinsic cherry                                            1\n",
+       "WASHED                                                      1\n",
+       "Fermented in barrels with figs 4days                        1\n",
+       "Natural Fermentation / Sundried                             1\n",
+       "Honey Process                                               1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Processing.Method'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6068eeaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corrected_processing_methods = {\n",
+    "    'Washed / Wet ':'Washed',\n",
+    "    'WASHED':'Washed',\n",
+    "    'DEEP WASHED':'Washed',\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    }"
+   ]
   }
  ],
  "metadata": {
